--- a/templates/includes/css.html
+++ b/templates/includes/css.html
@@ -1,11 +1,6 @@
-<link href="http://gotit.qiniudn.com/css/bootstrap.min.css" rel="stylesheet">
-<link href="http://gotit.qiniudn.com/css/bootstrap-select.min.css" rel="stylesheet">
+{#<link href="http://gotit.qiniudn.com/css/bootstrap.min.css" rel="stylesheet">#}
+{#<link href="http://gotit.qiniudn.com/css/bootstrap-select.min.css" rel="stylesheet">#}
 
-<style>
- .navbar-inverse {
-	text-shadow: 0 -1px 0 rgba(0,0,0,.15);
-	background-color: #563d7c;
-	border-color: #463265;
-	box-shadow: 0 1px 0 rgba(255,255,255,.1);
-}
-</style>
+    <!-- Le styles -->
+    <link href="http://gotit.qiniudn.com/css/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://gotit.qiniudn.com/css/css/index.css" rel="stylesheet">
