--- a/templates/zheng.html
+++ b/templates/zheng.html
@@ -1,57 +1,57 @@
-{% extends "base-search.html" %}
+{% extends "base-new.html" %}
 {% block title %}Got it--正方教务系统查询工具{% endblock %}
 
 {% block content %}
-<center><h1>正方教务系统查询工具</h1></center>
-<hr>
-<form name="main" method="post" accept-charset="utf-8" class="form-signin">
-  {% if alert %}
-  <div class="alert alert-info">
-    <p>{{ alert.content }}</p>
-  </div>
-  {% endif %}
 
-    <p>
-      <input type="text" id="xh" name="xh"  class="form-control" placeholder="学号" autofocus/>
-    </p>
-    <p><input type="password" id="pw" name="pw" class="form-control" placeholder="密码"/></p>
-    <p>
-      <input type="text" id="verify" name="verify" class="form-control" placeholder="验证码" style="width:50%; float:left;"/>&nbsp;
-      <img style="cursor: pointer;" onClick="reloadcode()" src="/zheng/checkcode?r={{ ctime }}" id='checkcode' alt="验证码" title="单击换一张验证码"/>
-    </p>
-    <p>
-      <select id="type" name="type" class="selectpicker">
-        <option value="1">成绩查询</option>
-        <option value="2">考试时间查询</option>
-        <option value="3">课表查询</option>
-        <option value="5" selected>上学期成绩</option>
-      </select>
-    </p>
-    <br>
-  <center>
-    <button type="submit" class="btn btn-primary">查询</button>&nbsp;
-    <button type="reset" class="btn">重置</button>
-  </center>
+    <div class="search-area col-lg-5">
+        <p class="search-title">正方教务系统</p>
 
-</form>
+        <form name="main" method="post" accept-charset="utf-8" class="search-form">
+
+            <p><input type="text" id="xh" name="xh" class="form-control" placeholder="学号" autofocus/></p>
+
+            <p><input type="password" id="pw" name="pw" class="form-control" placeholder="密码"/></p>
+            <div class="form-group">
+                <input type="text" id="verify" name="verify" class="form-control" placeholder="验证码"
+                       style="width:50%; float:left;"/>&nbsp;
+                <img style="cursor: pointer;" onClick="reloadcode()" src="/zheng/checkcode?r={{ ctime }}" id='checkcode'
+                     alt="验证码" title="单击换一张验证码"/>
+            </div>
+            <div class="form-group" style="padding-top: 10px;;">
+                <select id="type" name="type" class="form-control">
+                    <option value="1">成绩查询</option>
+                    <option value="2">考试时间查询</option>
+                    <option value="3">课表查询</option>
+                    <option value="5" selected>上学期成绩</option>
+                </select>
+            </div>
+            <br>
+
+            <div class="search-control">
+                <button type="submit" class="btn btn-primary">查询</button>
+                <button type="reset" class="btn">重置</button>
+            </div>
+        </form>
+
+    </div>
+
 
 {% endblock %}
 
 {% block foot %}
-<script type="text/javascript">
-  $('select').selectpicker();
-  $(document).ready(function () {
-    document.cookie = "cookieid=1; expires=60";
-    var result = document.cookie.indexOf("cookieid=") != -1;
-    if (!result) {
-        alert("浏览器未启用cookie,会导致无法查询，请启用！");
-    }
-});
-function reloadcode()
-  {
-    var verify=document.getElementById('checkcode');
-      verify.src=verify.src+'?';
-  }
-</script>
+    <script type="text/javascript">
+        {#        $('select').selectpicker();#}
+        $(document).ready(function () {
+            document.cookie = "cookieid=1; expires=60";
+            var result = document.cookie.indexOf("cookieid=") != -1;
+            if (!result) {
+                alert("浏览器未启用cookie,会导致无法查询，请启用！");
+            }
+        });
+        function reloadcode() {
+            var verify = document.getElementById('checkcode');
+            verify.src = verify.src + '?';
+        }
+    </script>
 {% endblock %}
 
