--- a/templates/base-panel.html
+++ b/templates/base-panel.html
@@ -9,8 +9,9 @@
     <!-- Le styles -->
     <style>
     body {
-      padding-top: 60px;
-      padding-bottom: 40px;
+        background-color: #ffffff;
+        padding-top: 60px;
+        padding-bottom: 40px;
     }
     .sidebar-nav {
       padding: 9px 0;
@@ -34,7 +35,7 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top bs-navbar" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
             <span class="sr-only">Toggle navigation</span>
