--- a/templates/cet_bae.html
+++ b/templates/cet_bae.html
@@ -1,24 +1,31 @@
-{% extends "base-search.html" %}
-{% block title %}四六级成绩查询 -- Got it {% endblock %}
+{% extends "base-new.html" %}
+
+{% block title %}四六级成绩查询{% endblock %}
 
 {% block content %}
-    <center><h1>四六级成绩查询</h1></center>
-    <hr>
-    <form name="main" method="post" accept-charset="utf-8" class="form-signin" action="http://zhweitest.duapp.com/cet">
-      <div class="alert alert-success">
-      姓名多于三个字的只输入前三个字.<br>
-      <strong>查询较慢时可以多点几次 "查询" </strong>
-      </div>
-      {% if  not form.valid: %}
-        <p class="alert alert-danger">输入错误:</p>
-      {% endif %}
-      {% for d in form.inputs %}
-        <input type="{{ d.get_type() }}" id="{{ d.id }}" name="{{ d.name }}" class="form-control" placeholder="{{ d.description }}" {% if loop.first %}autofocus{%endif%}/>
-      {% endfor %}
-      <br>
-      <center>
-        <button type="submit" class="btn btn-primary">查询</button>&nbsp;
-        <button type="reset" class="btn">重置</button>
-      </center>
+    <div class="search-area col-lg-5">
+
+    <p class="search-title">四六级成绩查询</p>
+
+    <form name="main" method="post" accept-charset="utf-8" class="search-form" action="http://zhweitest.duapp.com/cet">
+
+        {% if  not form.valid %}
+            <p class="alert alert-danger">输入错误:</p>
+        {% endif %}
+        {% for d in form.inputs %}
+            <p><input type="{{ d.get_type() }}" id="{{ d.id }}" name="{{ d.name }}" class="form-control"
+                      placeholder="{{ d.description }}" {% if loop.first %}autofocus{% endif %}/></p>
+        {% endfor %}
+        <span class="help-block">
+            姓名多于三个字的只输入前三个字, <strong>查询较慢时可以多点几次 "查询"</strong>
+        </span>
+
+        <div class="search-control">
+            <button type="submit" class="btn btn-primary">查询</button>
+            <button type="reset" class="btn">重置</button>
+        </div>
     </form>
+
+    </div>
+
 {% endblock %}
