--- a/templates/donate.html
+++ b/templates/donate.html
@@ -1,50 +1,60 @@
 {% extends 'base-index.html' %}
 
-{% block title %}我们为你Got it{% endblock %}
+{% block title %}赞助{% endblock %}
 
-{% block nav %}
-<li><a href="/">首页</a></li>
-<li><a href="/notice.html">公告</a></li>
-<li><a href="/comment.html">留言</a></li>
-<li class="active"><a href="/donate.html">赞助</a></li>
+{% block head %}
+    <style>
+        body {
+            background-color: #FFFFFF;
+        }
+        .jumbotron {
+            text-align: center;
+        }
+        .content {
+            margin: 0 auto;
+            float: none;
+        }
+    </style>
 {% endblock %}
 
 {% block content %}
 
-<div class="jumbotron">
-   <a href='http://me.alipay.com/zhweifcx'> <img src='https://img.alipay.com/sys/personalprod/style/mc/btn-index.png' /> </a>
-  <p class="lead"></p>
-</div>
+    <div class="content col-md-9">
+        <div class="jumbotron">
+            <a href='http://me.alipay.com/zhweifcx'>
+                <img src='https://img.alipay.com/sys/personalprod/style/mc/btn-index.png'/>
+            </a>
+        </div>
 
-<hr />
+        <hr/>
+        <div>
+            <h5>&nbsp;&nbsp;点击上面图片使用支付宝赞助我们, 只要您的金额&nbsp;<i>&gt;0元</i>&nbsp;, 都代表着您对我们的支持, 我们都会致以您同样的感谢!
+                您可以选择自己名字是否出现在下面的<i>网站赞助者名单</i>上, 请在付款说明中注明, 谢谢!</h5>
+            <br/>
+            <br/>
+        </div>
 
-<div>
-  <h5>&nbsp;&nbsp;点击上面图片使用支付宝赞助我们, 只要您的金额&nbsp;<i>&gt;0元</i>&nbsp;, 都代表着您对我们的支持, 我们都会致以您同样的感谢! 您可以选择自己名字是否出现在下面的<i>网站赞助者名单</i>上, 请在付款说明中注明, 谢谢!</h5>
+        <div>
+        <h4 id="names">赞助者名单</h4>
+            <br/>
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th>赞助者</th>
+                    <th><strong>金额</strong></th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for sp in sponsor %}
+                    <tr>
+                        <th>{{ sp.name }}</th>
+                        <td>{{ sp.much }}&nbsp;元</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
 
-  <br />
-  <br />
-</div>
-
-<div>
-
-  <h4 id="names">赞助者名单</h4>
-  <br />
-  <table class="table table-hover">
-    <thead>
-    <tr>
-      <th>赞助者</th>
-      <th><strong>金额</strong></th>
-    </tr>
-    </thead>
-    <tbody>
-      {% for sp in sponsor %}
-      <tr>
-        <th>{{ sp.name }}</th>
-        <td>{{ sp.much }}&nbsp;元</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-</div>
+    </div>
 
 {% endblock %}
