--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,20 +1,21 @@
-<div style="clear: both;"></div>
-<hr>
 <div class="footer">
-  <center>
     <a href="http://api.gotit.asia" target="_blank">API</a>&nbsp;
     Power by <a href="http://webpy.org/" target="_blank">web.py</a>&nbsp;
-    <a href="http://python.org/" target="_blank">python</a>&nbsp;
     <a href="http://sdutlinux.org" target="_blank">SLUG</a>&nbsp;
+    <a class="logoimg" href="/zheng"><img src="/static/ico/favicon.png" alt="Logo"/></a><br/>
     Author:<a href="http://zhangweide.cn" target="_blank">zhwei</a>&nbsp;
     Version:2.0
-  </center>
-  <!-- baidu sitecenter   -->
-  <div style="display: none;">
-    <script type="text/javascript">
-      var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-      document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
-      </script>
-  </div>
-  <!-- baidu sitecenter   -->
-</div><!-- footer -->
+    <div style="display: none;">
+    <!-- baidu sitecenter   -->
+        <script type="text/javascript">
+            var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+            document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8798cad9d47e876ea6c4f4ce5ff5fe5b' type='text/javascript'%3E%3C/script%3E"));
+        </script>
+    <!-- baidu sitecenter   -->
+    </div>
+</div>
+<!-- Le javascript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
