--- a/templates/includes/js.html
+++ b/templates/includes/js.html
@@ -1,3 +1,5 @@
+<!-- Le javascript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
 <script src="http://gotit.qiniudn.com/js/jquery.min.js"></script>
 <script src="http://gotit.qiniudn.com/js/bootstrap.min.js"></script>
-<script src="http://gotit.qiniudn.com/js/bootstrap-select.min.js"></script>
