--- a/templates/normal_form.html
+++ b/templates/normal_form.html
@@ -1,23 +1,25 @@
-{% extends "base-search.html" %}
+{% extends "base-new.html" %}
+
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-  <center><h1>{{ title }}</h1></center>
-    <hr>
-    <form name="main" method="post" accept-charset="utf-8" class="form-signin">
 
-      {% if not form.valid %}
-        <p class="alert alert-danger">输入错误:</p>
-      {% endif %}
-      {% for d in form.inputs %}
-        <input type="{{ d.get_type() }}" id="{{ d.id }}" name="{{ d.name }}" class="form-control" placeholder="{{ d.description }}" {% if loop.first %}autofocus{%endif%}/>
-      {% endfor %}
+    <div class="search-area col-lg-5">
+        <p class="search-title">{{ title }}</p>
+        <form name="main" method="post" accept-charset="utf-8" class="search-form">
+            {% if not form.valid %}
+                <p class="alert alert-danger">输入错误:</p>
+            {% endif %}
+            {% for d in form.inputs %}
+                <p><input type="{{ d.get_type() }}" id="{{ d.id }}" name="{{ d.name }}" class="form-control"
+                          placeholder="{{ d.description }}" {% if loop.first %}autofocus{% endif %}/></p>
+            {% endfor %}
 
-      <br>
-      <center>
-        <button type="submit" class="btn btn-primary">查询</button>&nbsp;
-        <button type="reset" class="btn">重置</button>
-      </center>
-    </form>
-  
+            <div class="search-control">
+                <button type="submit" class="btn btn-primary">查询</button>
+                &nbsp;
+                <button type="reset" class="btn">重置</button>
+            </div>
+        </form>
+    </div>
 {% endblock %}
