--- a/templates/score.html
+++ b/templates/score.html
@@ -1,28 +1,27 @@
-{%- extends "base-search.html" -%}
+{%- extends "base-new.html" -%}
+
 {%- block title -%}成绩查询系统{%- endblock -%}
 
 {%- block content -%}
-    <center><h1>成绩查询系统</h1></center>
-    <hr>
-    <form name="main" method="post" accept-charset="utf-8" class="form-signin">
-      {%- if alert -%}
-      <div class="alert alert-info">
-        {{ alert }}
-      </div>
-      {%- endif -%}
-      {%- if not form.valid -%}
-        <p class="alert alert-danger">输入错误:</p>
-      {%- endif -%}
+    <div class="search-area col-lg-5">
 
-      {%- for d in form.inputs -%}
-        <input type="{{ d.get_type() }}" id="{{ d.id }}" name="{{ d.name }}" class="form-control" placeholder="{{ d.description }}" {%- if loop.first -%}autofocus{%-endif-%}/>
-      {%- endfor -%}
+        <p class="search-title">成绩查询系统</p>
 
-      <br>
-      <center>
-        <button type="submit" class="btn btn-primary">查询</button>&nbsp;
-        <button type="reset" class="btn">重置</button>
-      </center>
-    </form>
+        <form name="main" method="post" accept-charset="utf-8" class="search-form">
+            {%- if not form.valid -%}
+                <p class="alert alert-danger">输入错误:</p>
+            {%- endif -%}
+
+            {%- for d in form.inputs -%}
+                <input type="{{ d.get_type() }}" id="{{ d.id }}" name="{{ d.name }}" class="form-control"
+                       placeholder="{{ d.description }}" {%- if loop.first -%}autofocus{%- endif -%}/>
+            {%- endfor -%}
+
+            <div class="search-control">
+                <button type="submit" class="btn btn-primary">查询</button>
+                <button type="reset" class="btn">重置</button>
+            </div>
+        </form>
+    </div>
 
 {%- endblock -%}
