--- a/templates/base-result.html
+++ b/templates/base-result.html
@@ -32,7 +32,7 @@
                 <a class="btn btn-warning" href='/more/kaoshi'>考试时间</a>&nbsp;
                 <a class="btn btn-success" href='/more/score'>绩点&总成绩</a>&nbsp;
                 <a class="btn btn-default" href='/more/oldcet'>往年CET</a>&nbsp;
-                <a onclick=condensed() class='btn btn-default'>表格调整</a>&nbsp;
+                <a onclick="condensed()" class="btn btn-default">表格调整</a>&nbsp;
             </p>
             <hr/>
         </div>
@@ -43,7 +43,7 @@
     {% endblock %}
     <div class="visible-xs">
         <p>查询更多：
-            <a onclick=condensed() class='btn btn-block btn-default'>表格调整</a>
+            <a onclick="condensed()" class='btn btn-block btn-default'>表格调整</a>
             <a class="btn btn-block btn-primary" href='/more/zheng'>成绩</a>
             <a class="btn btn-block btn-default" href='/more/lastscore'>上学期成绩</a>
             <a class="btn btn-block btn-info" href='/more/kebiao'>课表</a>
