--- a/templates/comment.html
+++ b/templates/comment.html
@@ -10,7 +10,7 @@
 {% endblock %}
 {% block content %}
 
-    <div class="center col-md-9">
+    <div class="center col-md-9 list-group-item">
 
         <!-- Duoshuo Comment BEGIN -->
         <div class="ds-thread"></div>
