--- a/templates/includes/css.html
+++ b/templates/includes/css.html
@@ -1,6 +1,3 @@
-{#<link href="http://gotit.qiniudn.com/css/bootstrap.min.css" rel="stylesheet">#}
-{#<link href="http://gotit.qiniudn.com/css/bootstrap-select.min.css" rel="stylesheet">#}
-
     <!-- Le styles -->
-    <link href="http://gotit.qiniudn.com/css/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://gotit.qiniudn.com/css/css/index.css" rel="stylesheet">
+    <link href="http://gotit.qiniudn.com/css/bootstrap-flat.min.css" rel="stylesheet">
+    <link href="http://gotit.qiniudn.com/css/index.css" rel="stylesheet">
