--- a/templates/internalerror.html
+++ b/templates/internalerror.html
@@ -13,7 +13,11 @@
 
 <div class='alert alert-danger'>
 <h1>500</h1>
-<p>糟糕！出问题了！！</p>
+<p class="lead">糟糕！出问题了！！</p>
+
 </div>
+
+    <p><a href="http://gotit.asia/comment.html" class="btn btn-primary btn-block">说一下你的情况吧!</a></p>
+
 
 {% endblock %}
