--- a/templates/weixin.html
+++ b/templates/weixin.html
@@ -31,7 +31,7 @@
 
             <p>Ps: 验证码依旧很鸡肋，实在没找到好的展示方式，只能通过图文信息了，希望大家能耐心阅读微信提示。</p>
 
-            <p><abbr title="http://zhangweide.cn">zhwei</abbr></p>
+            <p class="well well-sm"><abbr title="http://zhangweide.cn">zhwei</abbr></p>
         </div>
     </div>
 
