--- a/templates/base-panel.html
+++ b/templates/base-panel.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="http://gotit.qiniudn.com/font-awesome.min.css" />
     <!-- Le styles -->
     <style>
-    body {
+    html, body {
         background-color: #ffffff;
         padding-top: 60px;
         padding-bottom: 40px;
