--- a/templates/index_new.html
+++ b/templates/index_new.html
@@ -48,7 +48,7 @@
                     <p>四六级最新成绩查询</p>
                 </div>
                 <div class="panel-footer">
-                    <a href="/zheng" class="btn btn-default btn-block">Go</a>
+                    <a href="/cet" class="btn btn-default btn-block">Go</a>
                 </div>
             </div>
             <div class="panel panel-primary">
@@ -59,7 +59,7 @@
                     <p>往年四六级成绩, 痛定思痛!</p>
                 </div>
                 <div class="panel-footer">
-                    <a href="/zheng" class="btn btn-default btn-block">Go</a>
+                    <a href="/cet/former" class="btn btn-default btn-block">Go</a>
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
                     <p>微信公众帐号, 成绩查询, 方便快捷, 一目了然!</p>
                 </div>
                 <div class="panel-footer">
-                    <a href="/zheng" class="btn btn-default btn-block">Go</a>
+                    <a href="http://wechat.gotit.asia" class="btn btn-default btn-block">Go</a>
                 </div>
             </div>
             <div class="panel panel-primary">
@@ -83,7 +83,7 @@
                     <p>在图书馆借了哪些书, 超期了没有?</p>
                 </div>
                 <div class="panel-footer">
-                    <a href="/zheng" class="btn btn-default btn-block">Go</a>
+                    <a href="/libr" class="btn btn-default btn-block">Go</a>
                 </div>
             </div>
             <div class="panel panel-primary">
@@ -94,7 +94,7 @@
                     <p>您访问的页面找不回来了！ 但我们可以一起寻找失踪宝贝</p>
                 </div>
                 <div class="panel-footer">
-                    <a href="/zheng" class="btn btn-default btn-block">Go</a>
+                    <a href="/404" class="btn btn-default btn-block">Go</a>
                 </div>
             </div>
         </div>
@@ -107,7 +107,7 @@
                     <p>查询入学以来所有成绩,包括第二专业和补考成绩以及平均学分绩点.</p>
                 </div>
                 <div class="panel-footer">
-                    <a href="/zheng" class="btn btn-default btn-block">Go</a>
+                    <a href="/score" class="btn btn-default btn-block">Go</a>
                 </div>
             </div>
             <div class="panel panel-primary">
@@ -118,7 +118,7 @@
                     <p>您的每一分钱都会让<strong>Gotit</strong>做的更好!</p>
                 </div>
                 <div class="panel-footer">
-                    <a href="/zheng" class="btn btn-default btn-block">Go</a>
+                    <a href="/donate.html#names" class="btn btn-default btn-block">Go</a>
                 </div>
             </div>
         </div>
@@ -127,7 +127,7 @@
 
 
 {% include "includes/footer.html" %}
-<script src="/static/js/stick-up.min.js"></script>
+<script src="http://gotit.qiniudn.com/js/stick-up.min.js"></script>
 <script type="text/javascript">
     //initializing jQuery
     jQuery(function ($) {
