--- a/templates/notice.html
+++ b/templates/notice.html
@@ -1,26 +1,34 @@
 {% extends "base-index.html" %}
 {% block title %}公告--Got it{% endblock %}
 
-{% block nav %}
-<li><a href="/">首页</a></li>
-<li class="active"><a href="#">公告</a></li>
-<li><a href="/comment.html">留言</a></li>
-<li><a href="/donate.html">赞助</a></li>
+{% block head %}
+    <style xmlns="http://www.w3.org/1999/html">
+        html, body {
+            background-color: #ffffff;
+        }
+    </style>
 {% endblock %}
 
 {% block content %}
-<h2>网站公告</h2>
-  {% for new in news %}
-  <div>
-    {{ new.content }}
-    <p>
-      <i class="glyphicon glyphicon-paperclip"></i>&nbsp;<strong>发布状态</strong>
-      <p><i class="glyphicon glyphicon-user"></i>&nbsp;
-      <abbr title="http://zhangweide.cn">zhwei</abbr>&nbsp;
-        <i class="glyphicon glyphicon-calendar"></i> {{ new.datetime }}</p>
-    </p>
-  </div>
-  <div class="clearfix"><br /><br /><br /></div>
-  {% endfor %}
-</ul>
+    <div class="col-md-9 center">
+        <h1>网站公告</h1>
+        <hr/>
+        <div class="list-group">
+
+            {% for new in news %}
+                <div class="list-group-item">
+                    <div>
+                    {{ new.content }}
+                    </div>
+                    <div class="well well-sm">
+                        <i class="glyphicon glyphicon-paperclip"></i>&nbsp;<strong>Status: </strong>
+                        <i class="glyphicon glyphicon-user"></i><abbr title="http://zhangweide.cn/">zhwei</abbr>
+                        <i class="glyphicon glyphicon-calendar"></i>{{ new.datetime.strftime('%Y-%m-%d') }}
+                    </div>
+                </div>
+                <div class="clearfix"><br/></div>
+            {% endfor %}
+        </div>
+    </div>
+
 {% endblock %}
