bf merg to stable

--- a/templates/base-search.html
+++ b/templates/base-search.html
@@ -68,7 +68,7 @@
                 <li><a href="/contact.html">联系我们</a></li>
               </ul>
             </li>
-            <li><a href="/comment.html">留言</a></li>
+            <li><a href="http://{{ domains.main }}/comment.html">留言</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
           </ul>
