--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -6,32 +6,32 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://gotit.asia">Got it</a>
+            <a class="navbar-brand" href="http://{{ domains.main }}">Got it</a>
         </div>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/zheng">正方</a></li>
-                <li><a href="/score">绩点</a></li>
+                <li><a href="http://{{ domains.main }}/zheng">正方</a></li>
+                <li><a href="http://{{ domains.main }}/score">绩点</a></li>
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">其他<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/libr">图书馆余书</a></li>
-                        <li><a href="/cet">CET</a></li>
-                        <li><a href="/cet/former">往年CET成绩</a></li>
+                        <li><a href="http://{{ domains.main }}/libr">图书馆余书</a></li>
+                        <li><a href="http://{{ domains.main }}/cet">CET</a></li>
+                        <li><a href="http://{{ domains.main }}/cet/former">往年CET成绩</a></li>
                     </ul>
                 </li>
-                <li><a href="/notice.html">公告</a></li>
-                <li><a href="/comment.html">留言</a></li>
-                <li><a href="/donate.html">赞助</a></li>
+                <li><a href="http://{{ domains.main }}/notice.html">公告</a></li>
+                <li><a href="http://{{ domains.main }}/comment.html">留言</a></li>
+                <li><a href="http://{{ domains.main }}/donate.html">赞助</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="http://wechat.gotit.asia" target="_blank">微信</a></li>
+                <li><a href="http://{{ domains.wechat }}" target="_blank">微信</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">关于<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/contact.html">联系我们</a></li>
+                        <li><a href="http://{{ domains.main }}/contact.html">联系我们</a></li>
                         <li class="divider"></li>
-                        <li><a href="http://api.gotit.asia/">API</a></li>
+                        <li><a href="http://{{ domains.api }}">API</a></li>
                     </ul>
                 </li>
             </ul>
