--- a/templates/internalerror.html
+++ b/templates/internalerror.html
@@ -5,7 +5,7 @@
 {% block nav %}
 <li><a href="/">首页</a></li>
 <li><a href="/notice.html">公告</a></li>
-<li><a href="/comment.html">留言</a></li>
+<li><a href="http://{{ domains.main }}/comment.html">留言</a></li>
 <li><a href="/donate.html">赞助</a></li>
 {% endblock %}
 
@@ -17,7 +17,7 @@
 
 </div>
 
-    <p><a href="http://gotit.asia/comment.html" class="btn btn-primary btn-block">说一下你的情况吧!</a></p>
+    <p><a href="http://{{ domains.main }}/comment.html" class="btn btn-primary btn-block">说一下你的情况吧!</a></p>
 
 
 {% endblock %}
