--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,7 @@
 {% block nav %}
 <li><a href="/">首页</a></li>
 <li><a href="/notice.html">公告</a></li>
-<li><a href="/comment.html">留言</a></li>
+<li><a href="http://{{ domains.main }}/comment.html">留言</a></li>
 <li class="active"><a href="/contact.html">我们</a></li>
 {% endblock %}
 
