access_token bug
java 在调用api时发送过来的access_token 接收不到，具体原因未知
header关键字换成了accesstoken

--- a/templates/api_doc.html
+++ b/templates/api_doc.html
@@ -760,7 +760,7 @@ body .task-list{
 </li>
 <li>验证类接口需要登录后才能使用, 如果仅查询单项信息推荐使用下面的成绩类或课表类接口<br>
 </li>
-<li>开发者在使用接口前先通过<a href="mailto:zhwei@gotit.asia">邮件</a>联系作者 索要<code>ACCESS_TOKEN</code>, 将其放入请求<code>header</code>中.</li>
+<li>开发者在使用接口前先通过<a href="mailto:zhwei@gotit.asia">邮件</a>联系作者 索要<code>ACCESSTOKEN</code>, 将其放入请求<code>header</code>中.</li>
 <li>次数限制 <code>1000次/小时</code>, 防止端口被恶意使用, 如果配额不够请联系作者.</li>
 </ol>
 </li>
