--- a/templates/base-panel.html
+++ b/templates/base-panel.html
@@ -43,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ domains.main }}">Gotit</a>
+          <a class="navbar-brand" href="http://{{ domains.main }}">Gotit</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
